# rust_lab

./: README.md
AI/openai_chatbot/: Cargo.toml  README.md
AI/openai_chatbot/src/: main.rs
AI/openai_chatbot/src/mcp/: console.rs  consumer.rs  message.rs  mod.rs  openai.rs  provider.rs
cosmiqnotz/: Cargo.toml  README.md
cosmiqnotz/api/: Cargo.toml
cosmiqnotz/api/src/: main.rs
cosmiqnotz/app_info/: implementation-guide.md  project-structure.md
cosmiqnotz/migrations/: init.surql
cosmiqnotz/src/: app.rs  main.rs
cosmiqnotz/src-tauri/: Cargo.toml  tauri.conf.json
cosmiqnotz/src-tauri/src/: commands.rs
cosmiqnotz/src/components/: mod.rs  note-editor.rs  note-list.rs  toolbar.rs
cosmiqnotz/src/models/: mod.rs  note.rs
cosmiqnotz/src/services/: mod.rs  note-service.rs
cosmiqnotz/src/styles/: main.css
systems/: moon_phase.rs
wasm_bouncing_balls/: Cargo.toml  README.md
wasm_bouncing_balls/src/: lib.rs
wasm_bouncing_balls/static/: index.html  main.js
