[package]
name = "openai_chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
reqwest = { version = "0.11.23", features = ["json"] }
dotenv = "0.15.0"
async-trait = "0.1.77"
